# data-engineering-test

./: .gitignore  QUICKSTART.md  README.md  consumer.py  docker-compose.yml  event_generator.py  mock_event_stream.py  pyproject.toml  requirements.txt  verify_setup.py
