[tool.poetry]
name = "sr-data-engineer-test"
version = "0.1.0"
description = "Real-time restaurant analytics system for data engineering exercise"
authors = ["Restaurant Analytics Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
clickhouse-connect = "0.7.1"
faker = "22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
